<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/radius_10"
    app:cardElevation="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_green_list_style"
        android:padding="@dimen/radius_32">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/text_16"
                    android:textColor="@color/black"
                    android:text="@string/this_transaction"
                    style="@style/TexViewFont"/>

                <TextView
                    android:id="@+id/txt_desc"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:singleLine="false"
                    android:padding="16sp"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_all_read"
                    style="@style/TexViewFont"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/radius_32">

                <TextView
                    android:id="@+id/no_act_btn"
                    style="@style/Font_family_light"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/radius_10"
                    android:paddingBottom="@dimen/radius_10"
                    android:layout_marginEnd="@dimen/radius_10"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/yes_act_btn"
                    style="@style/Font_family_light"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/radius_10"
                    android:paddingBottom="@dimen/radius_10"
                    android:text="@string/sure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>