<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_thumbnail"
            android:background="@drawable/img_baground_blesstea"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_16"
                android:layout_marginTop="@dimen/margin_top_16"
                android:paddingBottom="@dimen/padding_16"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_16"
                    android:layout_marginStart="@dimen/margin_left_16"
                    android:layout_marginEnd="@dimen/margin_right_16"
                    android:layout_marginTop="@dimen/margin_top_32"
                    android:alpha=".5"
                    android:background="@drawable/black_border_fade"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_left_16"
                        android:layout_marginEnd="@dimen/margin_right_16"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_18"
                        android:layout_gravity="start"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/login_title_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_left_16"
                        android:layout_marginEnd="@dimen/margin_right_16"
                        android:layout_marginBottom="@dimen/margin_bottom_4"
                        android:textColor="@color/white"
                        android:gravity="start"
                        android:textSize="@dimen/text_16"
                        android:layout_gravity="start"
                        android:lineSpacingExtra="@dimen/lineSpacingExtra_4"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/login_title_2" />

                    <EditText
                        android:id="@+id/user_id_et"
                        style="@style/Font_family_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="@dimen/padding_8"
                        android:hint="@string/login_user_id"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:padding="@dimen/padding_16"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/text_18"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>

                    <View
                        style="@style/Normal_Margin_Style"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:background="@color/view_line" />

                    <EditText
                        android:id="@+id/password_et"
                        style="@style/Font_family_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="@dimen/padding_8"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/padding_16"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/text_18"
                        android:focusableInTouchMode="true"/>

                    <View
                        style="@style/Normal_Margin_Style"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:layout_marginBottom="@dimen/margin_bottom_16"
                        android:background="@color/view_line" />
                </LinearLayout>

                <Button
                    android:id="@+id/login_btn"
                    style="@style/Font_family_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingStart="@dimen/margin_right_16"
                    android:paddingEnd="@dimen/margin_right_16"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:layout_marginBottom="@dimen/margin_bottom_16"
                    android:background="@drawable/button_login_style"
                    android:text="@string/login_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_18" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_16"
            android:layout_marginEnd="@dimen/margin_right_16"
            android:layout_marginBottom="@dimen/margin_top_16"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12"
            android:gravity="center"
            android:fontFamily="sans-serif-regular"
            android:text="@string/login_bottom" />

        <RelativeLayout
            android:id="@+id/relative_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".6"
            android:background="@color/white">

            <ProgressBar
                android:id="@+id/main_progress_bar"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
