<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/radius_10"
    app:cardElevation="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pin_dialog_style"
        android:padding="@dimen/radius_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/kota"
                    style="@style/TexViewFont"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/period_background_style">

                <Spinner
                    android:id="@+id/city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radius_10"
                android:orientation="horizontal">

                <TextView
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/alamat"
                    style="@style/TexViewFont"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_gray_background_style">

                <EditText
                    android:id="@+id/et_alamat"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/alamat"
                    android:lines="4"
                    android:textColor="@color/black"
                    android:textColorHint="@color/curated_light"
                    android:textSize="@dimen/text_14"
                    android:padding="@dimen/padding_12"
                    android:focusableInTouchMode="true"
                    android:focusable="true"/>
            </LinearLayout>

            <TextView
                android:id="@+id/submit_btn"
                style="@style/Font_family_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="@dimen/radius_10"
                android:paddingBottom="@dimen/radius_10"
                android:paddingStart="@dimen/radius_24"
                android:paddingEnd="@dimen/radius_24"
                android:layout_marginTop="@dimen/margin_bottom_16"
                android:background="@drawable/button_green_style"
                android:text="@string/submit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_14" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>